@@ -546,6 +546,11 @@ files in /etc/cobbler that can be edited.
 
 Running "cobbler sync" is required to apply any changes that are made manually.
 
+=head2 TRIGGERS
+
+Triggers provide a way to integrate cobbler with arbitrary 3rd party software without modifying cobbler's code.  
+When adding a distro, profile, system, or repo, all scripts in /var/lib/cobbler/triggers/add are executed for the particular object type.  Each particular file must be executable and it is executed with the name of the item being added as a parameter.  Deletions work similarly -- delete triggers live in /var/lib/cobbler/triggers/delete.  Order of execution is arbitrary, and cobbler does not ship with any triggers by default.
+
 =head2 API
 
 Cobbler also makes itself available as a Python API for use by higher level management software.
